# Jerasure

./: .gitignore  License.txt  Makefile  Makefile.am  Makefile.in  README  README.md  README.nd  README.txt  aclocal.m4  cauchy.c  cauchy_best_r6.c  configure  configure.ac  doxygen.config  galois.c  galois.h  jerasure.c  jerasure.h  liberation.c  makefile  makefile.orig
Examples/: .swp  Makefile  Makefile.am  Makefile.in  cauchy_01.c  cauchy_02.c  cauchy_03.c  cauchy_04.c  decoder.c  encoder.c  jerasure_01.c  jerasure_02.c  jerasure_03.c  jerasure_04.c  jerasure_05.c  jerasure_06.c  jerasure_07.c  jerasure_08.c  liberation_01.c  makefile  makefile.orig  reed_sol_01.c  reed_sol_02.c  reed_sol_03.c  reed_sol_04.c  reed_sol_hard_time_gf.c  reed_sol_test_gf.c  reed_sol_time_gf.c  test_all_gfs.sh  time_all_gfs.sh  time_all_gfs_argv_init.sh  time_all_gfs_hard_init.sh
Test/: makefile  reed_sol_test_01.c  reed_sol_test_02.c  test_all_gfs.sh  time_all_gfs.sh
doc/html/: cauchy_8c.html  cauchy_8h.html  cauchy_8h_source.html  cauchy__best__r6_8c.html  files.html  formula.repository  galois_8c.html  galois_8h.html  galois_8h_source.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  index.html  jerasure_8c.html  jerasure_8h.html  jerasure_8h_source.html  liberation_8c.html  liberation_8h.html  liberation_8h_source.html  pages.html  reed__sol_8c.html  reed__sol_8h.html  reed__sol_8h_source.html  todo.html
doc/html/search/: all_62.html  all_63.html  all_67.html  all_6a.html  all_6c.html  all_6e.html  all_72.html  defines_6c.html  defines_72.html  defines_73.html  defines_74.html  files_63.html  files_67.html  files_6a.html  files_6c.html  files_72.html  functions_63.html  functions_67.html  functions_6a.html  functions_6c.html  functions_72.html  search.js  variables_63.html
doc/latex/: cauchy_8c.tex  cauchy_8h.tex  cauchy__best__r6_8c.tex  doxygen.sty  files.tex  galois_8c.tex  galois_8h.tex  jerasure_8c.tex  jerasure_8h.tex  liberation_8c.tex  liberation_8h.tex  reed__sol_8c.tex  reed__sol_8h.tex  refman.tex  todo.tex
include/: config.h.in  galois.h
m4/: ax_ext.m4
src/: Makefile  Makefile.am  Makefile.in  cauchy.h  cauchy_best_r6.c  galois.c  jerasure.c  jerasure.h  liberation.c  liberation.h  reed_sol.c
