# Jerasure AM file

INCLUDES=-I../
AM_CFLAGS = -O3 $(SIMD_FLAGS) -fPIC $(INCLUDES)

bin_PROGRAMS = jerasure_01 \
               jerasure_02 \
               jerasure_03 \
               jerasure_04 \
               jerasure_05 \
               jerasure_06 \
               jerasure_07 \
               jerasure_08 \
               reed_sol_01 \
               reed_sol_02 \
               reed_sol_03 \
               reed_sol_04 \
               reed_sol_test_gf \
               reed_sol_time_gf \
               cauchy_01 \
               cauchy_02 \
               cauchy_03 \
               cauchy_04 \
               liberation_01 \
               encoder \
               decoder

jerasure_01_SOURCES = jerasure_01.c
jerasure_01_LDADD = ../src/libJerasure.la

jerasure_02_SOURCES = jerasure_02.c
jerasure_02_LDADD = ../src/libJerasure.la

jerasure_03_SOURCES = jerasure_03.c
jerasure_03_LDADD = ../src/libJerasure.la

jerasure_04_SOURCES = jerasure_04.c
jerasure_04_LDADD = ../src/libJerasure.la

jerasure_05_SOURCES = jerasure_05.c
jerasure_05_LDADD = ../src/libJerasure.la

jerasure_06_SOURCES = jerasure_06.c
jerasure_06_LDADD = ../src/libJerasure.la

jerasure_07_SOURCES = jerasure_07.c
jerasure_07_LDADD = ../src/libJerasure.la

jerasure_08_SOURCES = jerasure_08.c
jerasure_08_LDADD = ../src/libJerasure.la

reed_sol_01_SOURCES = reed_sol_01.c
reed_sol_01_LDADD = ../src/libJerasure.la

reed_sol_02_SOURCES = reed_sol_02.c
reed_sol_02_LDADD = ../src/libJerasure.la

reed_sol_03_SOURCES = reed_sol_03.c
reed_sol_03_LDADD = ../src/libJerasure.la

reed_sol_04_SOURCES = reed_sol_04.c
reed_sol_04_LDADD = ../src/libJerasure.la

reed_sol_test_gf_SOURCES = reed_sol_test_gf.c
reed_sol_test_gf_LDADD = ../src/libJerasure.la

reed_sol_time_gf_SOURCES = reed_sol_time_gf.c
reed_sol_time_gf_LDADD = ../src/libJerasure.la

cauchy_01_SOURCES = cauchy_01.c
cauchy_01_LDADD = ../src/libJerasure.la

cauchy_02_SOURCES = cauchy_02.c
cauchy_02_LDADD = ../src/libJerasure.la

cauchy_03_SOURCES = cauchy_03.c
cauchy_03_LDADD = ../src/libJerasure.la

cauchy_04_SOURCES = cauchy_04.c
cauchy_04_LDADD = ../src/libJerasure.la

liberation_01_SOURCES = liberation_01.c
liberation_01_LDADD = ../src/libJerasure.la

encoder_SOURCES = encoder.c
encoder_LDADD = ../src/libJerasure.la

decoder_SOURCES = decoder.c
decoder_LDADD = ../src/libJerasure.la
